# FoldersEncryptor

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
resources/fonts/: JetBrainsMono_Regular.hpp
src/: main.cpp
src/application/: Application.cpp  Application.h  Application.hpp  ApplicationConstants.h  ApplicationRegistry.hpp
src/core/controller/decryptor/: DecryptionController.cpp  DecryptionController.h
src/core/controller/encryptor/: EncryptionController.cpp  EncryptionController.h
src/core/controller/utils/: ControllerUtils.cpp  ControllerUtils.h
src/core/enctyption/decryptor/: Decryptor.cpp  Decryptor.h  DecryptorResult.h
src/core/enctyption/encryptor/: Encryptor.h  Encryptor.tpp  EncryptorResult.h
src/core/enctyption/utils/: EncryptionInfo.hpp  EncryptionUtils.cpp  EncryptionUtils.h
src/core/io/reader/: DecryptingReader.cpp  DecryptingReader.h
src/core/io/writer/: EncryptingWriter.cpp  EncryptingWriter.h
src/core/model/chunk/: Chunk.cpp  Chunk.h
src/core/model/serializedchunk/: SerializedChunk.h
src/core/multithreading/: BlockingStrictIndexedQueue.hpp  ThreadPool.hpp
src/core/processor/: Processor.cpp  Processor.h
src/core/processor/explorer/: ExplorerTool.cpp  ExplorerTool.h
src/core/serialization/deserializer/: ChunkDeserializer.cpp  ChunkDeserializer.h
src/core/serialization/serializer/: ChunkSerializer.cpp  ChunkSerializer.h
src/gui/: GuiConstants.h  GuiController.hpp  GuiGlobalController.hpp  GuiLayer.cpp  GuiLayer.h  WindowsEnum.h
src/gui/imgui/: ImguiController.cpp  ImguiController.h  ImguiTheme.h
src/gui/sdl/: SdlController.cpp  SdlController.h
src/gui/window/: GuiMainWindow.hpp  GuiUtils.hpp  GuiWindow.hpp  GuiWindowId.hpp
src/gui/window/abstract/: GuiWindow.hpp  GuiWindowController.hpp
src/gui/window/error/: ErrorGuiWindow.hpp  ErrorGuiWindowController.hpp  ErrorWindowAction.hpp
src/gui/window/functional/: FunctionalGuiWindow.hpp  FunctionalGuiWindowController.cpp  FunctionalGuiWindowController.hpp  FunctionalWindowAction.hpp
src/gui/window/login/: LoginGuiWindow.hpp  LoginGuiWindowController.cpp  LoginGuiWindowController.h  LoginGuiWindowController.hpp  LoginWindowAction.hpp
src/gui/window/main/: MainGuiWindow.cpp  MainGuiWindow.hpp  MainGuiWindowController.hpp  MainWindowAction.hpp
src/gui/window/password/: FilePasswordGuiWindow.hpp  FilePasswordGuiWindowController.hpp  FilePasswordWindowAction.hpp
src/gui/window/progressbar/: ProgressBarGuiWindow.hpp  ProgressBarGuiWindowController.hpp  ProgressBarWindowAction.hpp
src/gui/window/properties/: PropertiesGuiWindow.hpp  PropertiesGuiWindowController.cpp  PropertiesGuiWindowController.hpp  PropertiesWindowAction.hpp
src/selector/: Selector.cpp  Selector.h
src/utils/files/: FilesUtils.cpp  FilesUtils.h
src/utils/properties/: Properties.hpp  PropertiesFileBuilder.hpp  PropertiesLoader.hpp
src/utils/storage/: StorageChecker.cpp  StorageChecker.hpp  StorageCheckerLinux.cpp  StorageCheckerMac.cpp  StorageCheckerWindows.cpp
src/utils/string/: StringUtils.hpp
